# gemma4-ollama

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/sample-audio/: sample.m4a
docs/: memory.md
models/: gemma4-audio.Modelfile
scripts/: large-audio-stt-rag.py  math-centroid.py  math-cosine-similarity.py  math-dot-product.py  math-euclidean-distance.py  memory-add.py  memory-reset.py  memory-search.py  ollama-audio-python.py  ollama-audio-requests.py  ollama-embeddings-python.py  ollama-embeddings-requests.py  ollama-image-python.py  ollama-image-requests.py  ollama-text-python.py  ollama-text-requests.py  ollama-voice-chat.py
scripts/extract-data/: extract-sample-earnings.sh
src/: ollama-requests.py  ollama-text.py  ollama_audio.py
src/audio_gemma4_ollama/: __init__.py  embeddings.py  memory.py  ollama_audio.py  tts.py
src/gemma4_ollama/audio/: __init__.py  core.py  stt.py  tts.py
src/gemma4_ollama/embeddings/: __init__.py
src/gemma4_ollama/image/: __init__.py  core.py
src/gemma4_ollama/memory/: __init__.py  vector_store.py
tests/: test_ollama_audio.py
