[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-gemma4-ollama"
version = "1.0.1"
description = "Gemma4 audio capabilities"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Abel Garza Ramírez", email = "abel@ciberdata.net"},
]
dependencies = [
    "ollama",
    "requests",
    "python-dotenv",
    "gTTS",
    "customtkinter"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
